added azure service bus dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/algoriddledb
 spring.datasource.username=admin
 spring.datasource.password=admin
 
-# create and drop table, good for testing, production set to none or comment it
+## create and drop table, good for testing, production set to none or comment it
 spring.jpa.hibernate.ddl-auto=create-drop
+
+## azure
+azure.servicebus.connection-string=${local.azure.servicebus.connection-string}
