--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.azure:azure-messaging-servicebus:7.15.2'
 	implementation 'org.postgresql:postgresql:42.7.2'
 	implementation 'org.modelmapper:modelmapper:2.1.1'
 	compileOnly("org.springframework.boot:spring-boot-devtools")
