added simple listener for service bus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 ## azure
 azure.servicebus.connection-string=${local.azure.servicebus.connection-string}
+azure.servicebus.queue-name=${local.azure.servicebus.queue-name}
