listener for azure service bus working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,1 @@
-## default connection pool
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
-
-## PostgreSQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/algoriddledb
-spring.datasource.username=admin
-spring.datasource.password=admin
-
-## create and drop table, good for testing, production set to none or comment it
-spring.jpa.hibernate.ddl-auto=create-drop
-
-## azure
-azure.servicebus.connection-string=${local.azure.servicebus.connection-string}
-azure.servicebus.queue-name=${local.azure.servicebus.queue-name}
+spring.profiles.active=local
