--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.azure.spring:spring-cloud-azure-starter-servicebus-jms:5.10.0'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 	implementation 'org.postgresql:postgresql:42.7.2'
 	implementation 'org.modelmapper:modelmapper:2.1.1'
 	compileOnly("org.springframework.boot:spring-boot-devtools")
