--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ out/
 
 ### local properties
 /src/main/resources/application-local.properties
+/src/main/resources/algoriddle-firebase-adminsdk.json
