--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.azure.spring:spring-cloud-azure-starter-servicebus-jms:5.10.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.3'
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.2.3'
 	implementation 'com.google.firebase:firebase-admin:9.2.0'
 	implementation 'org.postgresql:postgresql:42.7.2'
