--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,5 @@ out/
 
 ### local properties
 /src/main/resources/application-local.properties
+/src/main/resources/application-docker.properties
 /src/main/resources/algoriddle-firebase-adminsdk.json
