--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ out/
 /src/main/resources/application-local.properties
 /src/main/resources/application-docker.properties
 /src/main/resources/algoriddle-firebase-adminsdk.json
+.env
+
