--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,11 +11,6 @@ services:
       POSTGRES_PASSWORD: admin
     ports:
       - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      retries: 5
-      timeout: 5s
 
   springbootapp:
     build:
@@ -25,10 +20,15 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
-    depends_on:
-      - postgres
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
-      interval: 10s
-      retries: 5
-      timeout: 5s
+    environment:
+      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT}
+      SPRING_DATASOURCE_HIKARI_MAXIMUMPOOLSIZE: ${SPRING_DATASOURCE_HIKARI_MAXIMUMPOOLSIZE}
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+      SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
+      SPRING_JMS_SERVICEBUS_CONNECTION_STRING: ${SPRING_JMS_SERVICEBUS_CONNECTION_STRING}
+      SPRING_JMS_SERVICEBUS_PRICING_TIER: ${SPRING_JMS_SERVICEBUS_PRICING_TIER}
+      SPRING_JMS_LISTENER_RECEIVE_TIMEOUT: ${SPRING_JMS_LISTENER_RECEIVE_TIMEOUT}
+      FIREBASE_CONFIG_JSON: ${FIREBASE_CONFIG_JSON}
+
