--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'com.google.firebase:firebase-admin:9.2.0'
 	implementation 'org.postgresql:postgresql:42.7.2'
 	implementation 'org.modelmapper:modelmapper:2.1.1'
+	implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.6.0'
 	compileOnly("org.springframework.boot:spring-boot-devtools")
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
